# uspds

./: INSTALL  Makefile.am  Makefile.in  Makefile.orig  README  auto.sh  backup.sh  break.sh  config.h  config.h.in  config.status  configure  configure.ac  connect  connect.cc  doxygen.cfg  executar.sh  executar_loop.sh  executar_sem_gui.sh  fast_exec.sh  log.txt  loop_executar_lars.sh  makelist.sh  menor.awk  mon.sh  output  results  s.awk  s.sh  script.sh  script2.sh  simulator_out  t  t.cc  terminar.sh
autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2  traces.3t
config/: hosts
src/: .nfs0003c6ae0000001f  a.out  backup.sh  connect  count.sh  esquema.txt
src/control/: pid.cc  pid.h
src/eyes_java/: .Eyes.java.swo  Eyes.java  Eyes.java~
src/eyes_opengl/: eyes.cc  eyes.h
src/genetic_algorithm/: Random.cc  Random.h  cromossomo.cc  cromossomo.h  gene.cc  gene.h  genetic_algorithm.cc  individuo.cc  individuo.cc~  individuo.h  individuo_data.cc  individuo_data.h  main  main.cc~  objective.cc  objective.h  parameters.h  population.cc  population.h
src/lib/: a.out  mmath.cc  mmath.h  mstring.cc  mstring.h  objeto.cc  objeto.h  parametros.h  protocolo.cc  protocolo.h  res_sistema.cc  res_sistema.h  rfc_protocol.txt  t_protocolo.cc  vetor2d.cc  vetor2d.h
src/lib/mathud/: a.out  flags_compilacao.txt  mathud.cc  mathud.h  teste.cc
src/performance_analysis/: pamon.cc  pamon.sh  performance_analysis.cc  performance_analysis.h
src/recorder/: recorder.cc
src/revel/: Makefile  Makefile.am  README  a.out  checkers.avi  reveltest.cpp
src/revel/.deps/: BaseEncoder.Po  XvidEncoder.Po  avilib.Po  revelcore.Po
src/simulator/: bola.cc  bola.h  campo.cc  campo.h  functions.h  functions_vo.h  history.cc  history.h  robo.cc  robo.cc.cc  robo.h  simulator.cc  simulator.cc.bak  simulator.h  simulator_main.cc
src/statistics/: statistics.cc
src/strategy/: base.cc  base.h
src/strategy_pf1/: ForceField.h  ForceField.~cpp  a.out  basicMove.cpp  futbot.h  strategy.cpp
src/strategy_pf2/: ForceField.cpp  ForceField.~h  basicMove.h  futbot.cpp  strategy.cpp  strategy.h  ~$rceField.h
src/teste/: a.out  gerar_angulo_bola_robo_inteiro.cc  sockClient  sockClient.cc  sockServer  sockServer.cc
